--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.8
 distlib==0.3.9
 filelock==3.17.0
 Flask==3.1.0
+Flask-JWT-Extended==4.7.1
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 idna==3.10
@@ -13,6 +14,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 platformdirs==4.3.6
+PyJWT==2.10.1
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
