--- a/requirements.txt
+++ b/requirements.txt
@@ -28,5 +28,6 @@ types-MarkupSafe==1.1.10
 types-Werkzeug==1.0.9
 typing_extensions==4.12.2
 urllib3==2.3.0
+validators==0.35.0
 virtualenv==20.29.1
 Werkzeug==3.1.3
