launch.json added to, so we don't get the 404 warning on looking for /.well-known/appspecfic/com.chrome.devtools.json.

--- a/launch.json
+++ b/launch.json
@@ -2,9 +2,21 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "requestAuthentication": {
-                "method": "default"
-            }
+            "name": "Python: Flask",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/.venv/bin/flask",
+            "args": [
+                "run",
+                "--debug"
+            ],
+            "env": {
+                "FLASK_APP": "src",
+                "FLASK_ENV": "development",
+                "FLASK_DEBUG": "1"
+            },
+            "console": "integratedTerminal",
+            "justMyCode": true
         }
     ]
 }
